Fixed projects-grid image not showing up after page transitions

--- a/src/components/ProjectsGrid/projects-grid.module.scss
+++ b/src/components/ProjectsGrid/projects-grid.module.scss
@@ -20,13 +20,8 @@
 .background {
   @include stretch;
   z-index: -1;
-  background-size: cover;
   opacity: 0;
-  transition: opacity 2.5s;
-}
-
-.active {
-  opacity: 1;
+  background-size: cover;
 }
 
 .list {
